addons/kyverno/policies/medtech-eu_mdr_ce_marking_and_udi-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: medtech-eu_mdr_ce_marking_and_udi
  annotations:
    rulehub.id: medtech.eu_mdr_ce_marking_and_udi
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: medtech.eu_mdr_ce_marking_and_udi: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
